<resources>
    <string name="superuser">Superuser</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="status_incoming">Incoming Superuser Request…</string>
    <string name="unknown_uid">Unknown UID: %s</string>
    <string name="application_request">%s is requesting Superuser access.</string>
    <string name="info">Warning: If you do not understand this, you should deny the request.</string>
    <string name="request">Superuser Request</string>
    <string name="package_header">Package:</string>
    <string name="app_header">App:</string>
    <string name="uid_header">Requested UID:</string>
    <string name="command_header">Command:</string>
    <string name="this_time_only">This time only</string>
    <string name="remember_for">Remember choice for %s minutes</string>
    <string name="remember_forever">Remember choice forever</string>
    <string name="interactive">Interactive</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="no_logs">No Logs</string>
    <string name="no_apps">There are currently no Superuser app policies.</string>
    <string name="logging">Logging</string>
    <string name="logging_summary">Enable or disable all Superuser request logging</string>
    <string name="pin_protection">PIN Protection</string>
    <string name="pin_protection_summary">Require entry of a PIN to approve Superuser requests</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="request_timeout_summary">Superuser requests will time out and be denied after %s seconds</string>
    <string name="notifications">Notifications</string>
    <string name="none">None</string>
    <string name="notifications_summary">A %s will be shown when an app is granted or denied Superuser permissions</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_mismatch">PIN did not match</string>
    <string name="pin_set">Superuser PIN protection enabled</string>
    <string name="number_seconds">%s seconds</string>
    <string name="superuser_granted">Superuser granted to %s</string>
    <string name="superuser_denied">Superuser denied to %s</string>
    <string name="toast">Toast</string>
    <string name="notification">Notification</string>
    <string name="no_notification">No notification will be shown</string>
    <string name="developer_warning">"Developer Warning:
android.permission.ACCESS_SUPERUSER
not declared in manifest."</string>
    <string name="superuser_description">full permissions to all device features and storage</string>
    <string name="superuser_description_more">Superuser grants full access to all device features and storage, including the secure and sensitive hardware elements of your device. This permission is potentially dangerous.</string>
    <string name="declared_permission">Declared Permission</string>
    <string name="declared_permission_summary">Only allow requests from apps that declare android.permission.ACCESS_SUPERUSER</string>
    <string name="automatic_response">Automatic Response</string>
    <string name="prompt">Prompt</string>
    <string name="automatic_response_allow_summary">Automatically allow new requests</string>
    <string name="automatic_response_deny_summary">Automatically deny new requests</string>
    <string name="automatic_response_prompt_summary">Show confirmation dialog for new requests</string>
    <string name="security">Security</string>
    <string name="multiuser_policy">Multiuser Policy</string>
    <string name="multiuser_owner_only_summary">Only the device owner can request Superuser</string>
    <string name="multiuser_owner_managed_summary">The device owner will be prompted when another user requests Superuser</string>
    <string name="multiuser_user_summary">All users can request Superuser</string>
    <string name="multiuser_owner_only">Owner Only</string>
    <string name="multiuser_owner_managed">Owner Managed</string>
    <string name="multiuser_user">All Users</string>
    <string name="multiuser_require_owner">The Multiuser Policy can only be managed by the device owner.</string>
    <string name="owner_login_info">Please switch to the owner account to approve or deny this request.</string>
    <string name="all_commands">All Commands</string>
    <string name="about">About</string>
    <string name="apps">Apps</string>
    <string name="installing">Installing</string>
    <string name="installing_superuser">Installing Superuser…</string>
    <string name="install_superuser">Install Superuser</string>
    <string name="install_superuser_info">"The Superuser binary (su) must be updated.

Please choose an installation method.
Recovery mode installation is recommended for HTC devices."</string>
    <string name="recovery_install">Recovery Install</string>
    <string name="install">Install</string>
    <string name="checking_superuser">Checking Superuser…</string>
    <string name="install_error">There was an error installing Superuser. Please send a log of the error to the developer.</string>
    <string name="install_success">Installation of Superuser was successful.</string>
    <string name="su_binary_outdated">The su binary is out of date.</string>
    <string name="superuser_access">Superuser Access</string>
    <string name="access_disabled">Disabled</string>
    <string name="apps_only">Apps only</string>
    <string name="adb_only">ADB only</string>
    <string name="apps_and_adb">Apps and ADB</string>
    <string name="whats_new">"What's New"</string>
    <string name="rate">Rate</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="pin_disabled">Superuser PIN protection disabled</string>
    <string name="disabled">Disabled</string>
    <string name="ga_trackingId">UA-40574069-2</string>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radio_controls_title">More…</string>
    <string name="wireless_networks_settings_title">Wireless &amp; networks</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="location_settings_title">Location access</string>
    <string name="security_settings_title">Security</string>
    <string name="bluetooth_settings_title">Bluetooth</string>
    <string name="wifi_settings_title">Wi‑Fi</string>
    <string name="sound_settings">Sound</string>
    <string name="account_settings">Accounts</string>
    <string name="display_settings">Display</string>
    <string name="storage_settings">Storage</string>
    <string name="about_settings">About phone</string>
    <string name="advanced_settings_title">Device options</string>
    <string name="ussd_dialer_title">USSD Dialer</string>
    <string name="applications_settings">Apps</string>
    <string name="app_ops_settings">App ops</string>
    <string name="language_settings">Language &amp; input</string>
    <string name="development_settings_title">Developer options</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="power_usage_summary_title">Battery</string>
    <string name="privacy_settings">Backup &amp; reset</string>
    <string name="add_account_label">Add account</string>
    <string name="data_usage_summary_title">Data usage</string>
    <string name="multi_sim_settings_title">Multi-sim settings</string>
    <string name="user_settings_title">Users</string>
    <string name="quick_links_title">Quick Links</string>
    <string name="rom_control_title">Hackdroid ROM Control</string>
	<string name="toggle_control_title">Notification Toggles</string>
    <string name="themes_title">Themes</string>
    <string name="quiet_hours_title">Quiet hours</string>
    <string name="quiet_hours_enabled_title">Enable quiet hours</string>
    <string name="quiet_hours_notifications_title">Mute notification sounds</string>
    <string name="quiet_hours_ringer_title">Mute phone ringtones</string>
    <string name="quiet_hours_still_title">Disable vibrations</string>
    <string name="quiet_hours_dim_title">Disable notification light</string>
    <string name="quiet_hours_auto_sms_group">Automatic response</string>
    <string name="quiet_hours_auto_sms_title">Incoming text messages</string>
    <string name="quiet_hours_auto_sms_call_title">Incoming phone calls</string>
    <string name="quiet_hours_auto_string_title">Response to send</string>
    <string name="quiet_hours_bypass_group">Bypass quiet hours</string>
    <string name="quiet_hours_sms_bypass_title">Text message bypass</string>
    <string name="quiet_hours_sms_code_title">Text message key</string>
    <string name="quiet_hours_call_bypass_title">Incoming call bypass</string>
    <string name="quiet_hours_calls_required_title">Number of calls in 30 minutes</string>
    <string name="quiet_hours_bypass_ringtone_title">Ringtone to play</string>
    <string name="quiet_hours_bypass_ringtone_loop_title">Ringtone loop</string>
    <string name="sprint_tools_title">Sprint Tools</string>
    <string name="auto_brightness_adjustment_title">Brightness adjustment</string>
    <string name="auto_brightness_twilight_adjustment">Adjust to sunrise and sunset</string>
    <string name="auto_brightness_sensitivity_title">Adjustment sensitivity</string>
    <string name="label_global_roaming_settings">Global roaming settings</string>
	<string name="app_drawer_title">App Drawer</string>
</resources>