<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:id="@id/wireless_section" android:title="@string/header_category_wireless_networks" />
    <header android:icon="@drawable/ic_settings_wireless" android:id="@id/wifi_settings" android:title="@string/wifi_settings_title" android:fragment="com.android.settings.wifi.WifiSettings" />
    <header android:icon="@drawable/ic_settings_bluetooth2" android:id="@id/bluetooth_settings" android:title="@string/bluetooth_settings_title" android:fragment="com.android.settings.bluetooth.BluetoothSettings" />
    <header android:icon="@drawable/ic_settings_data_usage" android:id="@id/data_usage_settings" android:title="@string/data_usage_summary_title" android:fragment="com.android.settings.DataUsageSummary" />
    <header android:id="@id/operator_settings" android:fragment="com.android.settings.WirelessSettings">
        <intent android:action="com.android.settings.OPERATOR_APPLICATION_SETTING" />
    </header>
    <header android:icon="@drawable/empty_icon" android:id="@id/wireless_settings" android:title="@string/radio_controls_title" android:fragment="com.android.settings.WirelessSettings" android:breadCrumbTitle="@string/wireless_networks_settings_title" />
    <header android:id="@id/quick_links" android:title="@string/quick_links_title" />
    <header android:icon="@drawable/ic_settings_rom_control" android:id="@id/rom_control" android:title="@string/rom_control_title">
        <intent android:targetPackage="com.aokp.romcontrol" android:action="android.intent.action.MAIN" android:targetClass="com.aokp.romcontrol.ROMControlActivity" />
    </header>
	<header android:icon="@drawable/ic_settings_toggle_control" android:id="@id/toggle_control" android:title="@string/toggle_control_title">
        <intent android:targetPackage="de.j4velin.notificationToggle" android:action="android.intent.action.MAIN" android:targetClass="de.j4velin.notificationToggle.settings.Main" />
    </header>
	<header android:icon="@drawable/ic_settings_app" android:id="@id/app_drawer" android:title="@string/app_drawer_title">
        <intent android:targetPackage="JakedUp.AppDrawer" android:action="android.intent.action.MAIN" android:targetClass="JakedUp.AppDrawer.Main" />
    </header>
    <header android:icon="@drawable/ic_settings_themes" android:id="@id/themes" android:title="@string/themes_title">
        <intent android:targetPackage="com.tmobile.themechooser" android:action="android.intent.action.MAIN" android:targetClass="com.tmobile.themechooser.ThemeChooser" />
    </header>
    <header android:icon="@drawable/ic_settings_advanced" android:id="@id/advanced_settings" android:title="@string/advanced_settings_title">
        <intent android:targetPackage="com.cyanogenmod.settings.device" android:action="com.cyanogenmod.action.LAUNCH_DEVICE_SETTINGS" android:targetClass="com.cyanogenmod.settings.device.DeviceSettings" />
    </header>
    <header android:icon="@drawable/ic_settings_ussd_dialer" android:id="@id/ussd_dialer" android:title="@string/ussd_dialer_title">
        <intent android:targetPackage="com.android.dialer" android:action="android.intent.action.MAIN" android:targetClass="com.android.dialer.DialtactsActivity" />
    </header>
    <header android:icon="@drawable/ic_sprint_tools" android:id="@id/sprint_tools" android:title="@string/sprint_tools_title">
        <intent android:targetPackage="org.teameos.settings.device" android:action="android.intent.action.MAIN" android:targetClass="org.teameos.settings.device.DeviceSettings" />
    </header>
    <header android:id="@id/device_section" android:title="@string/header_category_device" />
    <header android:icon="@drawable/ic_settings_sim" android:id="@id/multi_sim_settings" android:title="@string/multi_sim_settings_title">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.MultiSimSettings" />
    </header>
    <header android:icon="@drawable/ic_roaming_settings" android:id="@id/global_roaming_settings" android:title="@string/label_global_roaming_settings">
        <intent android:action="com.android.action.roamingsettings" />
    </header>
    <header android:icon="@drawable/ic_settings_sound" android:id="@id/sound_settings" android:title="@string/sound_settings" android:fragment="com.android.settings.SoundSettings" />
    <header android:icon="@drawable/ic_settings_display" android:id="@id/display_settings" android:title="@string/display_settings" android:fragment="com.android.settings.DisplaySettings" />
    <header android:icon="@drawable/ic_settings_storage" android:id="@id/storage_settings" android:title="@string/storage_settings" android:fragment="com.android.settings.deviceinfo.Memory" />
    <header android:icon="@drawable/ic_settings_battery" android:id="@id/battery_settings" android:title="@string/power_usage_summary_title" android:fragment="com.android.settings.fuelgauge.PowerUsageSummary" />
    <header android:icon="@drawable/ic_settings_applications" android:id="@id/application_settings" android:title="@string/applications_settings" android:fragment="com.android.settings.applications.ManageApplications" />
    <header android:icon="@drawable/ic_settings_multiuser" android:id="@id/user_settings" android:title="@string/user_settings_title" android:fragment="com.android.settings.users.UserSettings" />
    <header android:id="@id/manufacturer_settings" android:fragment="com.android.settings.WirelessSettings">
        <intent android:action="com.android.settings.MANUFACTURER_APPLICATION_SETTING" />
    </header>
    <header android:id="@id/personal_section" android:title="@string/header_category_personal" />
    <header android:icon="@drawable/ic_settings_location" android:id="@id/location_settings" android:title="@string/location_settings_title" android:fragment="com.android.settings.LocationSettings" />
    <header android:icon="@drawable/ic_settings_security" android:id="@id/security_settings" android:title="@string/security_settings_title" android:fragment="com.android.settings.SecuritySettings" />
    <header android:icon="@drawable/ic_settings_language" android:id="@id/language_settings" android:title="@string/language_settings" android:fragment="com.android.settings.inputmethod.InputMethodAndLanguageSettings" />
    <header android:icon="@drawable/ic_settings_backup" android:id="@id/privacy_settings" android:title="@string/privacy_settings" android:fragment="com.android.settings.PrivacySettings" />
    <header android:id="@id/account_settings" android:title="@string/account_settings" />
    <header android:icon="@drawable/ic_menu_add" android:id="@id/account_add" android:title="@string/add_account_label">
        <intent android:action="android.settings.ADD_ACCOUNT_SETTINGS" />
    </header>
    <header android:id="@id/system_section" android:title="@string/header_category_system" />
    <header android:icon="@drawable/ic_action_permission" android:id="@id/superuser" android:title="@string/superuser" android:fragment="com.koushikdutta.superuser.PolicyNativeFragment" />
    <header android:icon="@drawable/ic_app_ops" android:id="@id/appops_settings" android:title="@string/app_ops_settings" android:fragment="com.android.settings.applications.AppOpsSummary" />
    <header android:icon="@drawable/ic_settings_date_time" android:id="@id/date_time_settings" android:title="@string/date_and_time_settings_title" android:fragment="com.android.settings.DateTimeSettings" />
    <header android:icon="@drawable/ic_settings_accessibility" android:id="@id/accessibility_settings" android:title="@string/accessibility_settings" android:fragment="com.android.settings.AccessibilitySettings" />
    <header android:icon="@drawable/ic_settings_development" android:id="@id/development_settings" android:title="@string/development_settings_title" android:fragment="com.android.settings.DevelopmentSettings" />
    <header android:icon="@drawable/ic_settings_about" android:id="@id/about_settings" android:title="@string/about_settings" android:fragment="com.android.settings.DeviceInfoSettings" />
</preference-headers>